# easy_logging

./: easy_logging.py  pyproject.toml
