[build-system]
requires = ["setuptools"]

[project]
name = "easy_logging"
authors = [
    {name = "Luc", email = "lucifiel1618@gmail.com"},
]
description = "Easy logging macro based on coloredlogs"
requires-python = ">=3.11"
version = "3.0.0"

dependencies = [
    "coloredlogs"
]
[project.optional-dependencies]
colored-traceback = ["ipython"]